package behavioral.command.calculator;

public interface ICommand {
    void execute();
    void unexecute();
}
